<resources>
    <string name="app_name">TeamTrack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="CurrentTeamNames">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>

    <string-array name="Positions">
        <item>Junior</item>
        <item>Senior</item>
        <item>Captain</item>
        <item>Coach</item>
        <item>Head_Coach</item>
    </string-array>

    <string-array name="Teams">
        <item>Pink</item>
    </string-array>

    <string-array name="IncreamentValues">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="add_team_members">Add Team Members</string>
    <string name="create_new_team">Create new Team</string>
    <string name="edit_teams">Edit Teams</string>
    <string name="edit_position">Edit Position</string>
    <string name="edit_account">Edit Account</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="close_settings">Close Settings</string>
    <string name="members">Members</string>
    <string name="holds_the_members_of_the_current_team">Holds the members of the current team</string>
    <string name="allows_for_the_user_to_see_the_members_in_the_current_team">Allows for the user to see the members in the current team</string>
    <string name="allows_the_user_to_increase_by_a_specified_amount">Allows the user to increase by a specified amount</string>
    <string name="allows_the_user_to_decrease_by_a_specified_amount">Allows the user to decrease by a specified amount</string>
    <string name="add_team_members_Header">Add Team Members</string>
    <string name="name">Name</string>
    <string name="pending_members">Pending Members</string>
    <string name="adds_the_member_to_a_list_of_pending_members">Adds the member to a list of pending members</string>
    <string name="allows_the_user_add_members_to_the_current_team">Allows the user add members to the current team</string>
    <string name="new_team_name">New Team Name</string>
    <string name="select_team_color">Select Team Color</string>
    <string name="select_color">Select Color</string>
    <string name="input_the_new_team_name">Input the new team name</string>
    <string name="reason_for_points">Reason for points</string>
</resources>