<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/SettingsHeaderID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/DarkGrey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="25sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SettingsHeaderID">
        <Button
            android:id="@+id/AddTeamMember"
            android:layout_marginTop="20dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_team_members"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/CreateTeamBtn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/AddTeamMember"
            android:text="@string/create_new_team"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/EditTeamBtn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/CreateTeamBtn"
            android:text="@string/edit_teams"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/EditPosition"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/EditTeamBtn"
            android:text="@string/edit_position"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/EditAccount"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/EditPosition"
            android:text="@string/edit_account"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Notifications"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/EditAccount"
            android:text="@string/notifications"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Logout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Notifications"
            android:text="@string/logout"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/CloseSettings"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/close_settings"
            android:layout_alignParentBottom="true"
            android:textColor="@color/black" />

    </RelativeLayout>
</RelativeLayout>