<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearMembersWrapper"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/DarkGrey"
    android:layout_gravity="left"
    tools:ignore="RtlHardcoded">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/memberHeading"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/DarkGrey"
            android:text="@string/members"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/AddMember"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@+id/memberHeading"
            android:contentDescription="@string/allows_the_user_add_members_to_the_current_team"
            android:src="@drawable/baseline_add_circle_small24"
            android:background="@color/DarkGrey"/>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/holds_the_members_of_the_current_team"
        android:background="@color/lightGrey">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HeaderNavigationScrollLayouut"
            android:background="@color/lightGrey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MembersTxtView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
