<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CreateNewTeam"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/AddTeamMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/DarkGrey">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_team_members_Header"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/InputMemberLayout"
        android:layout_below="@+id/AddTeamMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/NewMemberJumperName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/ImageBtnAddMemberID"
            android:autofillHints="Member Name"
            android:background="@color/lightGrey"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/TeamPositionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/NewMemberJumperName"
            android:layout_marginTop="10dp"
            android:background="@color/lightGrey"/>

        <Spinner
            android:id="@+id/TeamSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/TeamPositionSpinner"
            android:layout_marginTop="10dp"
            android:background="@color/lightGrey" />

        <ImageButton
            android:id="@+id/ImageBtnAddMemberID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/grey"
            android:contentDescription="@string/adds_the_member_to_a_list_of_pending_members"
            android:src="@drawable/baseline_add_circle_24" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/InputMemberLayout">
        <LinearLayout
            android:id="@+id/AddMembersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/pending_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <RelativeLayout
                android:id="@+id/PendingMemberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/TxtAddedMemberNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/TxtAddedMemberPosition"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/TxtAddedMemberNames"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/TxtAddedMemberTeam"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/TxtAddedMemberPosition"
                    android:textSize="18sp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>